2001-12-12  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSHTTPURLHandle.m: Remove GSHTPPropertyBodyKey ... make
	the ([writeData:]) method do nothing until the page is reloaded,
	so its behavior is consistent with ([writeProperty:forKey:]) and
	can be used in conjunction with background loading (ie all I/O
	is done during the load).

2001-12-11  Manuel Guesdon <mguesdon@orange-concept.com>

	* Source/NSString.m: corrected  bug in +stringByTrimmingSpaces 
		(there was an exception when the string contains only spaces).

2001-12-08  Richard Frith-Macdonald <rfm@gnu.org>

	* Documentation/gsdoc/NSDistantObjectRequest.gsdoc: note that the
	class does not exist (and why).

2001-12-08  Gregory Casamento <greg_casamento@yahoo.com>
	* Source/GNUmakefile added SSL_LIB_DIRS += -L$(GNUSTEP_OBJ_DIR)
	to prevent build from failing when building from scratch.
	
2001-12-08  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSAttributedString.m: ([initWithCoder:]) fix typo.

2001-12-07  Adam Fedor  <fedor@gnu.org>

	* Headers/gnustep/base/NSDebug.h: Add NSDebugLog functions
	when GSWARN is defined (not DEBUG).

2001-12-07  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSHTTPURLHandle.m: Understand GSHTPPropertyBodyKey so we
	can set data to be posted in background.

2001-12-06  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GNUmakefile: Add library dependencies for SSL bundle ...
	it needs libobjc and libgnustep-base to be linked.
	* Source/NSFileHandle.m: Only try to load SSL bundle if asked for.

Mon Dec  5 16:32:31 2001  Adam Fedor  <fedor@yogi.doc.com>

	* Source/GSHTTPURLHandle.m: Include sys/fcntl.h for O_WRONLY, etc
 	(on Solaris).

2001-12-04  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GNUmakefile: Add flags for SSL and rules to build bundle
	* Source/GSHTTPURLHandle.m: use +sslClass
	* Source/GSUnixSSLHandle.m: Extract SSL support for bundle to this file.
	* Source/Makefile.preamble: Add flags for SSL